fix nav not full width on small screens

--- a/css/index-500px.css
+++ b/css/index-500px.css
@@ -1,4 +1,7 @@
 @media (max-width: 500px) {
+  header {
+    padding: 0;
+  }
   .header-section-1 ul {
     flex-wrap: wrap;
   }
