--- a/css/index.css
+++ b/css/index.css
@@ -183,10 +183,13 @@ h2 {
 }
 
 header {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+    margin: 0 auto;
+		padding: 0 50px;
+		max-width: 900px;		
 }
 
 header section {
